gitops/applications/pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-route
  namespace: pihole
spec:
  parentRefs:
  - name: gateway-api
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - pihole.home
  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
